--- a/DevFlash.AAA.Tests/DevFlash.AAA.Tests.csproj
+++ b/DevFlash.AAA.Tests/DevFlash.AAA.Tests.csproj
@@ -50,6 +50,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ProductFileLoggerTestAssertions.cs" />
+    <Compile Include="ProductFileLoggerTestsFixtureBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProductFileLoggerTests.cs" />
     <Compile Include="Stubs\StubDateTimeProvider.cs" />
