--- a/Mocking/DevFlash.Mocking/DevFlash.Mocking.csproj
+++ b/Mocking/DevFlash.Mocking/DevFlash.Mocking.csproj
@@ -45,11 +45,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IProductRepository.cs" />
     <Compile Include="Repository\ProductRepository.cs" />
-    <Compile Include="TestableCode\ConfigProvider\ConfigConstants.cs" />
-    <Compile Include="TestableCode\ConfigProvider\ConfigProvider.cs" />
-    <Compile Include="TestableCode\ConfigProvider\IConfigProvider.cs" />
-    <Compile Include="TestableCode\DateTimeProvider\DateTimeProvider.cs" />
-    <Compile Include="TestableCode\DateTimeProvider\IDateTimeProvider.cs" />
+    <Compile Include="TestableCode\Config\ConfigConstants.cs" />
+    <Compile Include="TestableCode\Config\ConfigProvider.cs" />
+    <Compile Include="TestableCode\Config\IConfigProvider.cs" />
+    <Compile Include="TestableCode\DateAndTime\DateTimeProvider.cs" />
+    <Compile Include="TestableCode\DateAndTime\DateTimeWrapper.cs" />
+    <Compile Include="TestableCode\DateAndTime\IDateTimeProvider.cs" />
     <Compile Include="TestableCode\IO\FileWrapper.cs" />
     <Compile Include="TestableCode\IO\IFileWrapper.cs" />
     <Compile Include="TestableCode\IO\IPathWrapper.cs" />
@@ -57,6 +58,9 @@
     <Compile Include="TestableCode\IO\PathWrapper.cs" />
     <Compile Include="TestableCode\IO\StreamWriterWrapper.cs" />
     <Compile Include="TestableCode\TestableClass.cs" />
+    <Compile Include="TestableCode\TestableClassUsingUtilsContainer.cs" />
+    <Compile Include="TestableCode\Utilities\IUtils.cs" />
+    <Compile Include="TestableCode\Utilities\Utils.cs" />
     <Compile Include="UntestableClass.cs" />
   </ItemGroup>
   <ItemGroup />
